[package]
authors = ["Misha Hawthorn"]
name = "battlesnake-rusty"
version = "1.0.0"
edition = "2021"

homepage = "https://play.battlesnake.com"
repository = "https://github.com/mishagp/battlesnake-rusty/"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A beginner Battlesnake written in Rust
"""

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.9.0"
rand = "0.8.4"
